# ProjectVault

./: .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  findings.md  progress.md  task_plan.md
.github/workflows/: ci.yml
backend/: create_taskplan.py  requirements.txt
backend/app/: __init__.py  core_api.py  main.py  run_server.py
backend/tests/: test_database_migrations.py  test_full_scanner.py  test_incremental_scanner.py  (+23 more)
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
prototype/: app.js  index.html  styles.css
release-validation/: clean-windows-validation.json  clean-windows-validation.txt  local-installed-usage-validation.json  local-installed-usage-validation.txt  phase13-release-quality-validation.json  phase13-release-quality-validation.txt
scripts/: ProjectVaultCleanWindows.wsb  _resolve_python.bat  build_backend_sidecar.ps1  chrome_console_probe.py  mock_openai_provider.ps1  phase12_rc_check.py  prepare_webview2_fixed_runtime.ps1  v2_6_semantic_search_spike.py  v2_beta_real_usage_validation.py  verify_clean_windows_release.ps1  verify_local_installed_usage.ps1  verify_phase13_release_quality.ps1  一键更新_扫描并生成总表.bat  一键更新_项目档案.bat  启动ProjectVault后端.bat  启动自动监听.bat  启动项目驾驶舱.bat  扫描项目档案.bat  提取需求_拖拽运行.bat  检查ProjectVault环境.bat  生成监控报告.bat  生成项目总表.bat  迁移历史项目到Schema2.0.bat  项目系统_菜单.bat
(+169 files in other folders)
